[package]

name = "processing_chain"
version = "0.1.0"
edition = "2021"
description = "Rust library to set up processing chains of large amount of files."
authors = [
  "Giorgio Savastano"
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/giorgiosavastano/process/"

keywords = ["process", "data", "parallel", "data-structure", "processing-chain"]
categories = ["data-structures", "science"]

[lib]
name = "processing_chain"

[dependencies]
anyhow = "1.0.63"
log = "0.4.17"
env_logger = "0.9.0"
rayon = "1.5.3"

