[package]

name = "processing_chain"
version = "0.2.0"
edition = "2021"
description = "Rust library to set up processing chains of large amounts of data."
authors = [
  "Giorgio Savastano"
]
license = "MIT"
readme = "README.md"

repository = "https://github.com/giorgiosavastano/process"

keywords = ["process", "data", "parallel", "data-structure", "processing-chain"]
categories = ["data-structures", "science"]

[lib]
name = "processing_chain"

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
env_logger = "0.9.3"
rayon = "1.5.3"
indicatif = {version = "0.17.2", features = ["rayon"]}
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }

